# LScript

./: ..gitignore.un~  .gitignore  AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  CMakePresets.json  Callable.h  Environment.cpp  Environment.h  Expr.h  Interpreter.cpp  Interpreter.h  LScript.cpp  LScript.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Stmt.h  Token.h
docs/: CNAME  LScript.js  LScript.wasm  emscripten-build  index.html  index.js
scripts/: NewFile  function.ls  script.ls
